package org.example;

public enum NombreCancha {
  BOMBONERA,
  CILINDRO,
}
